--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,11 +1,11 @@
 hibernate.connection.driver_class = org.postgresql.Driver
-hibernate.connection.url = jdbc:postgresql://localhost/hibernate
+hibernate.connection.url = jdbc:postgresql://localhost/postgres
 hibernate.hbm2ddl.auto = update
 hibernate.connection.username = postgres
 hibernate.connection.password = 123
 #hibernate.connection.autocommit = true
 
-hibernate.show_sql = true
+hibernate.show_sql = false
 hibernate.format_sql = true
 
 hibernate.current_session_context_class = thread
